✨ DRJ-216 - Allow insertion of custom fragments

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,9 @@
         font-family: Arial;
         white-space: pre-line;
       }
+      div[contenteditable] img {
+        vertical-align: top;
+      }
       .pending {
         border-radius:3px;
         padding:0px 2px;
