WLD-14040 fix test

--- a/examples/index.html
+++ b/examples/index.html
@@ -19,16 +19,16 @@
         vertical-align: top;
       }
       .pending {
-        border-radius:3px;
-        padding:0px 2px;
+        border-radius: 3px;
+        padding: 0px 2px;
         border: 1px dashed #a9bcff;
       }
       .final {
-        border-radius:5px;
-        padding:1px 3px;
-        background-color:#e0edf9;
-        display:inline-block;
-        color:#0091ce;
+        border-radius: 5px;
+        padding: 1px 3px;
+        background-color: #e0edf9;
+        display: inline-block;
+        color: #0091ce;
       }
       .autocomplete {
         border-radius: 4px;
@@ -51,6 +51,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="./index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
